[gd_scene format=3 uid="uid://da5qmyrwpuvqv"]

[ext_resource type="Script" uid="uid://cl3ek3rr3s1cc" path="res://Main/GameManager/game_manager.gd" id="1_lo75c"]
[ext_resource type="PackedScene" uid="uid://brob2mic4du8j" path="res://Main/inputManager/input_manager.tscn" id="2_rho54"]
[ext_resource type="Texture2D" uid="uid://y7e5dedgu0jh" path="res://Main/textures/floor.png" id="3_lo75c"]
[ext_resource type="PackedScene" uid="uid://c3bspoickrshi" path="res://Main/scoreManager/score_manager.tscn" id="4_k1qy3"]
[ext_resource type="PackedScene" uid="uid://baywenna0yuvs" path="res://Main/ballSpawner/ball_spawner.tscn" id="5_cmfik"]
[ext_resource type="Texture2D" uid="uid://ygrkfp1asqe1" path="res://Main/textures/sed.png" id="5_rho54"]
[ext_resource type="PackedScene" uid="uid://c160k3u8tidlm" path="res://Main/basket/basket.tscn" id="6_dmfaa"]
[ext_resource type="PackedScene" uid="uid://cuqmeek386lpl" path="res://Main/lineManager/line_manager.tscn" id="7_xarx3"]
[ext_resource type="PackedScene" uid="uid://bjiltq3m3iaai" path="res://Main/timer/timer.tscn" id="8_dly30"]
[ext_resource type="PackedScene" uid="uid://ddy2120gbpehu" path="res://Main/ReadyCounter/ready_counter.tscn" id="9_0ftvt"]
[ext_resource type="PackedScene" uid="uid://btfjl5umejy13" path="res://Main/pauseButton/pause_button.tscn" id="10_by642"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_816n6"]
size = Vector2(1020, 344)

[node name="GameManager" type="Node2D" unique_id=1129232144]
script = ExtResource("1_lo75c")

[node name="InputManager" parent="." unique_id=1898022755 instance=ExtResource("2_rho54")]

[node name="Floor" type="StaticBody2D" parent="." unique_id=295592933]
position = Vector2(1200, 1000)
scale = Vector2(10, 1)

[node name="FloorCollider" type="CollisionShape2D" parent="Floor" unique_id=588323363]
position = Vector2(9.3, 280)
shape = SubResource("RectangleShape2D_816n6")

[node name="Sprite2D" type="Sprite2D" parent="Floor" unique_id=1047885112]
position = Vector2(0, -325)
scale = Vector2(0.10004166, 0.99999994)
texture = ExtResource("3_lo75c")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Floor" unique_id=1914780446]
position = Vector2(497.3, -5251)
rotation = 1.5708
scale = Vector2(10, 0.1)
shape = SubResource("RectangleShape2D_816n6")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Floor" unique_id=351822021]
position = Vector2(-498.4, -5240)
rotation = 1.5708
scale = Vector2(10, 0.1)
shape = SubResource("RectangleShape2D_816n6")

[node name="ScoreManager" parent="." unique_id=1428882515 node_paths=PackedStringArray("Basket") instance=ExtResource("4_k1qy3")]
Basket = NodePath("../Basket")

[node name="BallSpawner" parent="." unique_id=198091304 instance=ExtResource("5_cmfik")]
position = Vector2(1660, 506)

[node name="Basket" parent="." unique_id=1493570365 instance=ExtResource("6_dmfaa")]
z_index = 3
position = Vector2(357, 426)

[node name="lineManager" parent="." unique_id=54955822 instance=ExtResource("7_xarx3")]
position = Vector2(1495, 382)

[node name="Timer" parent="." unique_id=2056794503 instance=ExtResource("8_dly30")]

[node name="readyCounter" parent="." unique_id=1653789200 instance=ExtResource("9_0ftvt")]
offset_left = 112.0
offset_top = 4.0
offset_right = 112.0
offset_bottom = 4.0

[node name="pauseButton" parent="." unique_id=877673494 instance=ExtResource("10_by642")]
light_mask = 1
visibility_layer = 1
offset_left = 1644.0
offset_top = 25.0
offset_right = 1644.0
offset_bottom = 25.0

[node name="DirectionalLight2D" type="DirectionalLight2D" parent="." unique_id=851814132]
energy = 0.25
shadow_enabled = true

[node name="testPosotion" type="Node2D" parent="." unique_id=1669485609]
position = Vector2(-137, 993)
scale = Vector2(10, 1)

[node name="Sprite2D" type="Sprite2D" parent="." unique_id=10765632]
z_index = -20
position = Vector2(1201, 677)
scale = Vector2(1, 1.0111111)
texture = ExtResource("5_rho54")
